--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ WJ<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -92,10 +92,11 @@
     </section>
 
         <li>projet station F infrastructure réseau </li>
+        <p> j'ai réaliser un projet Station F, visant à mettre en place une infrastructure réseau et système performante, repose sur une architecture robuste pour répondre aux besoins des startups. Le choix d'un file server performant permet une gestion centralisée des fichiers, facilitant l'accès et la synchronisation des données entre les utilisateurs. L'intégration de l'Active Directory (ADDS) permet de garantir une gestion fine des utilisateurs et des ressources avec une sécurité renforcée. La mise en place du DFS assure une haute disponibilité et une réplication efficace des données, optimisant ainsi la résilience du réseau. Enfin, une surveillance rigoureuse des logs et une sécurisation renforcée du réseau, notamment via des solutions comme EtherChannel, garantissent une continuité de service et une protection des données dans un environnement dynamique et en constante évolution. </p>
         <img src="projet2.jpg" >
 
          <h3> Parcourt : <h3>
-             <img src="PAR.png" >
+             <img src="fu.png" >
 
 
       </ul>
