--- a/veille.html
+++ b/veille.html
@@ -27,7 +27,7 @@
     <section id="trends">
         <div class="container">
             <h2>Les blockchains</h2>
-            <img src="BC.png" > 
+            <img src="blockchain.png" > 
             <br>
             <ul>
                 <li><strong>Une blockchain</strong> est un système qui permet de stocker des informations de manière sécurisée et transparente. Elle fonctionne comme un grand livre comptable numérique où chaque transaction est ajoutée sous forme de "bloc". Chaque bloc est lié au précédent, formant une chaîne. Ce système est décentralisé, ce qui signifie qu'il n'est contrôlé par personne en particulier. La blockchain est souvent utilisée pour les cryptomonnaies, mais elle peut servir pour bien d'autres applications.
